--- a/package.json
+++ b/package.json
@@ -4,11 +4,19 @@
   "private": true,
   "dependencies": {
     "firebase": "^5.7.0",
+    "leaflet": "^1.3.4",
+    "leaflet-geosearch": "^2.7.0",
+    "leaflet-search": "^2.9.7",
+    "lodash": "^4.17.11",
     "ol": "^5.3.0",
+    "ol-geocoder": "^3.2.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-leaflet": "^2.1.3",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
-    "reactstrap": "^6.5.0"
+    "reactstrap": "^6.5.0",
+    "redux-devtools-extension": "^2.13.7"
   },
   "scripts": {
     "start": "react-scripts start",
